# GameOfLife

./: .gitignore  App.cpp  App.h  Button.cpp  Button.h  CMakeLists.txt  GameOfLife.cpp  GameOfLife.sln  GameOfLife.vcxproj  GameOfLife.vcxproj.filters  LifeAlgorytm.cpp  LifeAlgorytm.h  README.md  main.cpp
GameOfLife/: App.cpp  App.h  Button.cpp  Button.h  GameOfLife.cpp  GameOfLife.vcxproj  GameOfLife.vcxproj.filters
GameOfLife/x64/Debug/: GameOfLife.exe.recipe  vc143.idb
GameOfLife/x64/Debug/GameOfLife.tlog/: CL.write.1.tlog  Cl.items.tlog  link.write.1.tlog
GameOfLife/x64/Release/: GameOfLife.iobj  GameOfLife.ipdb
GameOfLife/x64/Release/GameOfLife.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GameOfLife.lastbuildstate
x64/Debug/: GameOfLife.ilk  vc143.idb
x64/Debug/GameOfLife.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GameOfLife.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: GameOfLife.exe.recipe  GameOfLife.iobj  GameOfLife.ipdb
x64/Release/GameOfLife.tlog/: CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
